syntax = "proto3";
package actionresult;

option csharp_namespace = "Mumble.FirstGame.Serialization.Protobuf.ActionResult";
import "Action/Schema/Direction.proto";

message MoveActionResultDef{
    int32 id = 1;
    float x = 2;
    float y = 3;
    bool outOfBounds = 4;
    action.Direction facing = 5;
    float oldX = 6;
    float oldY = 7;
}